2004-12-09 Scott Dattalo <scott@dattalo.com>
	* src/protocol.h, src/protocol.cc, src/Makefile.am: New files to
	support a communication protocol for gpsim.
	* cli/socket.cc: moved much of the protocol related stuff to the
	new files.
	* src/value.h, src/value.cc, src/symbol.h, src/symbol.cc: Symbols
	and Values can now be assigned by Packets.
	* src/12bit-instructions.h, src/12bit-processors.h,
	src/14bit-instructions.h, src/14bit-processors.h,
	src/14bit-tmrs.h, src/16bit-processors.h, src/16bit-tmrs.h,
	src/breakpoints.h, src/p12x.h, src/p16f62x.h, src/p16x5x.h,
	src/p16x6x.h, src/p16x8x.h, src/pic-instructions.h,
	src/pic-processor.h, src/processor.h, src/trace.h, src/xref.h:
	fixed typo in GPL disclaimer.

	
2004-12-07 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: More socket clean up
	* src/modules.cc, src/modules.h, src/processor.cc,
	src/processor.h, src/symbol.cc, src/symbol.h: Removed deprecated
	code for setting/getting attributes. Added a new member function
	to the module_symbol that allows a character string to assign
	values to a module (this doesn't do anything yet).

	* modules/resistor.cc, modules/resistor.h, modules/usart.cc,
	modules/usart.h: removed deprecated set_attribute member function.

2004-12-06 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: Experimenting with binary data. Cleaned up socket
	link creation. Added a generic symbol read/write socket command.

2004-12-06 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: Wrap gtk2.x calls with #defines
	
2004-12-02 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: More additions to SocketLinks. It's now possible
	to tie a socket to a gpsim attribute. This allows an external
	application to directly control gpsim's behavior.

2004-12-02 Scott Dattalo <scott@dattalo.com>
	* src/pic-processor.h, src/pic-processor.cc, src/p16f87x.h,
	src/p16f87x.cc: Added the PIC 16f876
	
2004-12-01 Scott Dattalo <scott@dattalo.com>
	* cli/socket.cc: Fixed the socket interface for issues related